fix log and atan
Signed-off-by: xinyual <xinyual@amazon.com>